<resources>
    <string name="app_name">SpotMe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Definições</string>
    <string name="menu_home">Início</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="parking_history">Histórico de Estacionamentos</string>
    <string name="account">Perfil</string>
    <string name="settings">Definições</string>
    <string name="logout">Sair da Conta</string>
    <string name="home">Início</string>
    <string name="default_web_client_id">69337317514-saovv6gmcgpl646argq5587m7mlrbngp.apps.googleusercontent.com</string>
    <string-array name="language_options">
        <item>Português</item>
        <item>English</item>
    </string-array>
    <string name="welcome_back">Welcome Back!</string>
    <string name="do_login_continue">Log in to continue</string>
    <string name="email_text">Email</string>
    <string name="name_text">Name</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="phone_text">Phone Number</string>
    <string name="phone_short_text">Phone</string>
    <string name="or">Or</string>
    <string name="continue_google">Continue with Google</string>
    <string name="not_account_register_text">Don\'t have an account? Register</string>
    <string name="have_account_login_text">Already have an account? Log in</string>
    <string name="forgot_password_text">Forgot your password?</string>
    <string name="createa_account_text">Create Account</string>
    <string name="registar_text">Register</string>
    <string name="register_to_start_text">Register to get started</string>
    <string name="recover_text">Recover Password</string>
    <string name="insert_email_recover_text">Enter your email to receive the recovery link</string>
    <string name="send_email_recover">SEND RECOVERY LINK</string>
    <string name="remember_password_text">Remembered your password? Log in</string>
    <string name="personal_statistics_text">Personal Statistics</string>
    <string name="all_time_text">Total</string>
    <string name="parking_total_text">Total Parkings</string>
    <string name="parking_average_text">Average Parking Time</string>
    <string name="this_week_text">This Week</string>
    <string name="this_month_text">This Month</string>
    <string name="parking_title_text">Parking Title</string>
    <string name="parking_description_text">Parking Description</string>
    <string name="my_account_text">My Account</string>
    <string name="info_personal_text">Personal Information</string>
    <string name="account_actions_text">Account Actions</string>
    <string name="change_password_text">Change Password</string>
    <string name="delete_account_text">Delete Account</string>
    <string name="parking_history_text">Parking History</string>
    <string name="last_week_text">Last Week</string>
    <string name="last_month_text">Last Month</string>
    <string name="total_text">Total</string>
    <string name="average_time_text">Average Time</string>
    <string name="parking_text">Parkings</string>
    <string name="see_more_text">See More</string>
    <string name="parking_regist_text">Parking Registration</string>
    <string name="basic_info_text">Basic Information</string>
    <string name="location_text">Location</string>
    <string name="latitude_text">Latitude</string>
    <string name="longitude_text">Longitude</string>
    <string name="get_current_location_text">Get current location</string>
    <string name="parking_time_text">Parking Time</string>
    <string name="parking_photo_text">Parking Photo</string>
    <string name="no_photo_selected_text">No photo selected</string>
    <string name="take_photo_text">Take photo</string>
    <string name="gallery_text">Gallery</string>
    <string name="save_parking_text">SAVE PARKING</string>
    <string name="my_parking_text">My Parking</string>
    <string name="share_text">Share</string>
    <string name="status_text">Status</string>
    <string name="data_parking_text">Parking Data</string>
    <string name="date_text">Date</string>
    <string name="start_time_text">Start Time</string>
    <string name="end_time_text">End Time</string>
    <string name="notes_text">Notes</string>
    <string name="coordinates_text">Coordinates</string>
    <string name="copy_text">Copy</string>
    <string name="see_photo_text">View Photo</string>
    <string name="directions_text">Directions</string>
    <string name="remaining_time_text">Remaining Time</string>
    <string name="hi_text">Hi, how are you?</string>
    <string name="where_car_text">Where is your vehicle today?</string>
    <string name="set_location_car_text">Set my vehicle location</string>
    <string name="mark_description_location_car_text">Mark the place where you parked your vehicle to find it easily later.</string>
    <string name="set_short_location_car_text">Set location</string>
    <string name="find_car_text">Find my Vehicle</string>
    <string name="find_description_car_text">Navigate back to your car with directions and distance information.</string>
    <string name="rate_app_text">Rate our app</string>
    <string name="rate_app_description_text">Your opinion is important to us. Help us improve the app!</string>
    <string name="click_stars_text">Tap the stars to rate</string>
    <string name="share_experience_text">Share your experience (optional)</string>
    <string name="send_avaliation_text">Send review</string>
    <string name="send_later_text">Later</string>
    <string name="edit_phone_text">Edit phone number</string>
    <string name="input_phone_text">Enter the new phone number</string>
    <string name="cancel_text">Cancel</string>
    <string name="save_text">Save</string>
    <string name="edit_parking_text">Edit Parking Name</string>
    <string name="parking_name_text">Parking Name</string>
    <string name="edit_notes_text">Edit Notes</string>
    <string name="input_notes_text">Write your notes here</string>
    <string name="edit_name_text">Edit Profile Name</string>
    <string name="input_name_text">Enter the new name</string>
    <string name="update_email_text">Update Email</string>
    <string name="insert_email_text">Enter the new email</string>
    <string name="delete_acc_text">Delete Account</string>
    <string name="delete_text">Delete</string>
    <string name="delete_acc_description_text">This action cannot be undone. Enter your password to confirm.</string>
    <string name="update_photo_profile_text">Change Profile Photo</string>
    <string name="choose_galeria_text">Choose from Gallery</string>
    <string name="delete_photo_text">Remove Photo</string>
    <string name="current_password_text">Current password</string>
    <string name="new_password_text">New password</string>
    <string name="slogan_text">Less rounds. More life.</string>
    <string name="home_text">Home</string>
    <string name="perfil_text">Profile</string>
    <string name="settings_text">Settings</string>
    <string name="onFoot_text">(on foot)</string>
    <string name="logout_text">Log out</string>
    <string name="start_time_not_selected_text">Start time: Not selected</string>
    <string name="validate_title">Title is required</string>
    <string name="validate_latitude">Latitude is required</string>
    <string name="validate_formato_latitude">Invalid latitude format</string>
    <string name="validate_formato_longitude">Invalid longitude format</string>
    <string name="validate_longitude">Longitude is required</string>
    <string name="validate_textDuration">Duration is required when timer is enabled</string>
    <string name="validate_textDuration_zero">Duration must be greater than zero</string>
    <string name="validate_textDuration_format">Invalid duration format</string>
    <string name="concluded_text">Concluded</string>
    <string name="ongoing_text">Ongoing</string>
    <string name="duration_text">Duration</string>
    <string name="ending_text">⚠️ Ending!</string>
    <string name="almost_ending_text">⚠️ Warning! Almost ending!</string>
    <string name="time_over_text">Time is up!</string>
    <string name="reminder_message">There are %1$d minute(s) left before parking expires!</string>
    <string name="settings2_text">Settings</string>
    <string name="lang_text">Language</string>
    <string name="darkmode_text">Dark Mode</string>
    <string name="notifications_text">Notifications</string>
    <string name="activate_notifications_text">Enable Notifications</string>
    <string name="location_service_text">Location Services</string>
    <string name="data_privacy_text">Privacy and Data</string>
    <string name="delete_history_text">Clear History</string>
    <string name="app_info_text">App Information</string>
    <string name="rate2_app_text">Rate App</string>
    <string name="version_app_text">App Version</string>
    <string name="parking_list_text">Parking List</string>
    <string name="parking_add_text">Add Parking</string>
    <string name="parking_details_text">Parking Details</string>
    <string name="parking_route_text">Route to Parking</string>
    <string name="language_change_title">Language Change</string>
    <string name="language_change_message">The app needs to restart to apply the new language. Would you like to restart now?</string>
    <string name="restart_now">Restart Now</string>
    <string name="or_text">Or</string>
    <string name="encontrar_meu_veiculo">Find my vehicle</string>
    <string name="choose_start_time">Choose Start Time</string>
    <string name="start_time_not_selected">Start time: Not selected</string>
    <string name="allowed_duration">Allowed duration</string>
    <string name="minutes">minutes</string>
    <string name="duration_format_hours">Duration: %1$dh %2$dmin</string>
    <string name="duration_format_minutes">Duration: %1$dmin</string>
    <string name="duration_undefined">Duration: Not Defined</string>
    <string name="status_no_timer">No Timer</string>
    <string name="status_active">Active</string>
    <string name="status_completed">Completed</string>
    <string name="delete_parking_title">Delete parking</string>
    <string name="delete_parking_message">Are you sure you want to delete this parking?</string>
    <string name="delete_yes">Yes</string>
    <string name="delete_cancel">Cancel</string>
    <string name="delete_success">Parking successfully deleted</string>
    <string name="revoke_location_title">Revoke location permissions</string>
    <string name="revoke_location_message">For better security, we recommend revoking location permissions in app settings. Would you like to do this now?</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="location_restricted_app">Location access has been restricted within the app only</string>
    <string name="location_permission_error">Could not open permission settings</string>
    <string name="location_access_enabled">Location access allowed in the app</string>
    <string name="delete_history_title">Delete History</string>
    <string name="delete_history_message">Are you sure you want to delete your entire parking history? This action cannot be undone.</string>
    <string name="delete_button">Delete</string>
    <string name="delete_history_success">History successfully deleted! %1$d records removed.</string>
    <string name="delete_history_error">Error deleting history: %1$s</string>
    <string name="existing_rating_title">Existing Rating</string>
</resources>