<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/nav_parking_history">

    <fragment
        android:id="@+id/nav_parking_history"
        android:name="pt.estga.spotme.ui.parking.ParkingListViewFragment"
        android:label="@string/parking_history_text"
        tools:layout="@layout/fragment_parking_list_view" />
    <fragment
        android:id="@+id/nav_home"
        android:name="pt.estga.spotme.ui.home.HomeFragment"
        android:label="@string/home_text"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_account"
        android:name="pt.estga.spotme.ui.account.AccountFragment"
        android:label="@string/perfil_text"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="pt.estga.spotme.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/parkingListViewFragment"
        android:name="pt.estga.spotme.ui.parking.ParkingListViewFragment"
        android:label="@string/parking_list_text"
        tools:layout="@layout/fragment_parking_list_view">
        <action
            android:id="@+id/action_parkingListViewFragment_to_parkingFormFragment"
            app:destination="@id/parkingFormFragment" />
    </fragment>
    <fragment
        android:id="@+id/parkingFormFragment"
        android:name="pt.estga.spotme.ui.parking.ParkingFormFragment"
        android:label="@string/parking_add_text"
        tools:layout="@layout/fragment_parking_form" />
    <fragment
        android:id="@+id/parkingDetailViewFragment"
        android:name="pt.estga.spotme.ui.parking.ParkingDetailViewFragment"
        android:label="@string/parking_details_text"
        tools:layout="@layout/fragment_parking_detail_view" />
    <fragment
        android:id="@+id/parkingDetailViewFragmentHistory"
        android:name="pt.estga.spotme.ui.parking.ParkingDetailViewFragmentHistory"
        android:label="@string/parking_details_text"
        tools:layout="@layout/fragment_parking_detail_view_history" />
    <fragment
        android:id="@+id/personalStatisticsFragment"
        android:name="pt.estga.spotme.ui.account.PersonalStatisticsFragment"
        android:label="@string/personal_statistics_text"
        tools:layout="@layout/personal_statistics" />
    <fragment
        android:id="@+id/parkingRouteFragment"
        android:name="pt.estga.spotme.ui.routing.MapRouteFragment"
        android:label="@string/parking_route_text"
        tools:layout="@layout/fragment_map_route" />
</navigation>